add: support for a startup configuration file openbis.conf (corresponding to datamover.conf) which contains the java options, including memory settings
SVN: 12033