@@ -7,7 +7,7 @@ if [[ "$1" = '-n' || "$1" = '--nostartup' ]]; then
 fi
 
 if [ $# -lt 1 ]; then
-    echo "Usage: $0 [--nostartup] <server folder> [<service properties file>]"
+    echo "Usage: $0 [--nostartup] <server folder> [<service properties file> <startup properties file>]"
     echo "  --nostartup: do not start up tomcat automatically"
     exit 1
 fi
@@ -16,7 +16,7 @@ installation_folder="`dirname $0`"
 if [ ${installation_folder#/} == ${installation_folder} ]; then
 	installation_folder="`pwd`/${installation_folder}"
 fi
-server_folder=$1
+server_folder="$1"
 shift
 
 if [ ${server_folder#/} == ${server_folder} ]; then
@@ -24,16 +24,27 @@ if [ ${server_folder#/} == ${server_folder} ]; then
 fi
 
 properties_file="${installation_folder}/service.properties"
-# Check whether given properties file exists and is a regular file.
-if [ $1 ]; then
-	if [ ! -f $1 ]; then
+startup_properties_file="${installation_folder}/openbis.conf"
+# Check whether given properties files exist and are regular file.
+if [ "$1" -a "$2" ]; then
+	if [ ! -f "$1" ]; then
 		echo "Given properties file '$1' does not exist!"
 		exit 1
 	fi
 	properties_file="$1"
+	shift
 	if [ "${properties_file#/}" == "${properties_file}" ]; then
 		properties_file="`pwd`/${properties_file}"
 	fi
+        if [ ! -f "$1" ]; then
+                echo "Given properties file '$1' does not exist!"
+                exit 1
+        fi
+        startup_properties_file="$1"
+        shift
+        if [ "${startup_properties_file#/}" == "${startup_properties_file}" ]; then
+                startup_properties_file="`pwd`/${startup_properties_file}"
+        fi
 fi
 
 rel_tomcat_folder="apache-tomcat-`cat \"${installation_folder}/tomcat-version.txt\"`"
@@ -62,7 +73,8 @@ cp -p "${installation_folder}/passwd.sh" "${tomcat_folder}/bin"
 chmod 755 "${tomcat_folder}/bin/passwd.sh"
 STARTUP_TMP=`mktemp startup.sh.XXXXXX`
 sed -e "33i\\
-CATALINA_OPTS=\"-Xmx512M -Djavax.net.ssl.trustStore=openBIS.keystore -Ddatabase.create-from-scratch=false -Ddatabase.script-single-step-mode=false\"\\
+source \${PRGDIR}/../etc/openbis.conf\\
+CATALINA_OPTS=\"\${JAVA_OPTS:=-server -Djavax.net.ssl.trustStore=openBIS.keystore} \${JAVA_MEM_OPTS:=-Xmx2048m -Xms512m -XX:MaxPermSize=256m} -Ddatabase.create-from-scratch=false -Ddatabase.script-single-step-mode=false\"\\
 export CATALINA_OPTS\\
 \\
 if [ \${PRGDIR#/} == \${PRGDIR} ]; then\\
@@ -78,15 +90,17 @@ mkdir "${openbis_web_inf}/conf"
 
 # Copy configuration files
 
+mkdir  "${tomcat_folder}/etc"
 cp -p "${properties_file}" "${openbis_web_inf}/classes/service.properties"
 echo Given properties file \'${properties_file}\' copied to \'${openbis_web_inf}/classes/service.properties\'
+cp -p "${startup_properties_file}" "${tomcat_folder}/etc/"
+echo Given properties file \'${startup_properties_file}\' copied to \'${startup_properties_file}\'
 
 # Create symlinks for easier access
 
 cd "${server_folder}"
 ln -s "${rel_tomcat_folder}" apache-tomcat
 cd "${tomcat_folder}"
-mkdir etc
 ln -s "../${rel_openbis_web_inf}"/classes/service.properties etc/
 cp -p "${rel_openbis_web_inf}"/classes/etc/passwd etc/
 
